--- a/css/index.css
+++ b/css/index.css
@@ -262,10 +262,6 @@ h2 {
     width: 1.5rem;
 }
 
-.section__title__text {
-    /* border-bottom: 3px solid #e0e3e6; */
-}
-
 .section__title__subtitle {
     display: flex;
     align-items: center;
@@ -561,6 +557,12 @@ h2 {
     border-bottom: medium solid var(--secondary-color-font);
 }
 
+.section-6__main{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 .form-contact {
     display: grid;
     grid-template-areas:
@@ -622,6 +624,25 @@ input[type="email"] {
     font-weight: bold;
     text-transform: uppercase;
     border-radius: 0.5rem;
+}
+
+.loader{
+    align-self: center;
+    width: 2rem;
+}
+
+.none{
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.message-form{
+    font-size: 1.25rem;
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
+    
 }
 
 .footer {
@@ -697,6 +718,8 @@ input[type="email"] {
     border-radius: 1rem;
     box-shadow: 0 0 0.75rem 0.1rem var(--black-color-transparent);
 }
+
+
 
 @media screen and (min-width:38rem){
 
